# pandablob

./: .coveragerc  .gitignore  HISTORY.rst  LICENSE  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: main.yaml
pandablob/: __init__.py  pandablob.py
tests/: __init__.py  conftest.py  test_download.py  test_download_kwargs.py  test_upload.py  test_upload_kwargs.py
tests/test_files/: test_data.csv  test_data.json  test_data.parquet  test_data.xls  test_data.xlsx
tests/test_io/: csv_io  json_io  xls_io  xlsx_io
