# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = PandaBlob
description = Functions to easily transform Azure blobs into pandas DataFrames and vice versa.
author = Joris den Uijl
author-email = jorisdenuijl@gmail.com
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under

# https://pypi.python.org/pypi?%3Aaction=list_classifiers

classifiers =

    Development Status :: 4 - Beta

    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon/line-separated), e.g.

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = PandaBlob

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = 
    --cov --cov-report term-missing --cov-report html
    --black
    --isort
    --mypy
    --verbose
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = tests

[pylama:tests/*.py]
format = pylint
linters = pycodestyle,pydocstyle,pyflakes,mypy
ignore = W0611,D202,D203,D213

[pylama]
format = pylint
linters = pycodestyle,pydocstyle,pyflakes,mypy
skip = *docs*
ignore = W0611,D202,D203,D213

[pylama:pycodestyle]
max_line_length = 88

[pylama:pylint]
disable=R,C,W,I
good-names=log

[aliases]
docs = build_sphinx
test = pytest

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
